force-app/main/default/objects/Payment_Detail__c/Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Payment Detail S.No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>