force-app/main/default/objects/Payment_Detail__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <label>Bank name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>