force-app/main/default/objects/Payment_Detail__c/fields/set_as_default__c.field-meta.xml
<CustomField>
    <fullName>set_as_default__c</fullName>
    <label>set as default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>