force-app/main/default/objects/Payment_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bank_name__c</columns>
    <columns>CardType__c</columns>
    <columns>Expire_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Card_Number__c</columns>
    <columns>set_as_default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>